[tool.poetry]
name = "hw4"
version = "0.1.0"
description = "AI HW4 Programming"
authors = ["Neil Nie <yongyang.nie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
